--- a/templates/main_page/main_page.html
+++ b/templates/main_page/main_page.html
@@ -19,23 +19,22 @@
             aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-        <div class="carousel-item active" style="height: 350px; width:100%">
-            <img src="{% static 'imgs/test_imgs/Test_IMG001_eardrop-earrings.png' %}" class="img-fluid d-block w-100"
-                alt="...">
+        <div class="carousel-item active" >
+            <img src="{% static 'imgs/test_imgs/Test_IMG001_eardrop-earrings.png' %}" class="img-fluid d-block w-100" style="width: 100%; height:500px;" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
             </div>
         </div>
-        <div class="carousel-item" style="height: 350px; width:100%">
-            <img src="{% static 'imgs/test_imgs/Test_IMG002_necklace.png' %}" class="img-fluid d-block w-100" alt="...">
+        <div class="carousel-item" >
+            <img src="{% static 'imgs/test_imgs/Test_IMG002_necklace.png' %}" class="img-fluid d-block w-100" style="width: 100%; height:500px;" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
             </div>
         </div>
-        <div class="carousel-item" style="height: 350px; width:100%">
-            <img src="{% static 'imgs/test_imgs/Test_IMG003_ring.png' %}" class="img-fluid d-block w-100 " alt="...">
+        <div class="carousel-item" >
+            <img src="{% static 'imgs/test_imgs/Test_IMG003_ring.png' %}" class="img-fluid d-block w-100 " style="width: 100%; height:500px;" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
@@ -57,7 +56,7 @@
 <section>
     <div class="card-group">
         <div class="card h-200">
-            <img src="{% static 'imgs/test_imgs/Test_IMG004.png' %}" class="card-img-top" alt="...">
+            <img src="{% static 'imgs/test_imgs/Test_IMG004.png' %}" class="card-img-top" style="width: 100%; height:400px;" alt="...">
             <div class="card-body">
                 <h5 class="card-title">New Arrivals</h5>
                 <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
@@ -65,7 +64,7 @@
             </div>
         </div>
         <div class="card h-200">
-            <img src="{% static 'imgs/test_imgs/Test_IMG005.png' %}" class="card-img-top" alt="...">
+            <img src="{% static 'imgs/test_imgs/Test_IMG005.png' %}" class="card-img-top" style="width: 100%; height:400px;" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Best Sellers</h5>
                 <!-- <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p> -->
@@ -73,7 +72,7 @@
             </div>
         </div>
         <div class="card h-200">
-            <img src="{% static 'imgs/test_imgs/Test_IMG006.png' %}" class="card-img-top" alt="...">
+            <img src="{% static 'imgs/test_imgs/Test_IMG006.png' %}" class="card-img-top" style="width: 100%; height:400px;" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Full Collection</h5>
                 <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p> -->
@@ -84,83 +83,108 @@
 </section>
 
 <!-- END Clickable PIC Links -->
-
+<section>
 <div class="container-fluid">
     <div class="row">
         <div class="col" style="background-color: rgb(0, 255, 13)">Word Panel</div>
     </div>
 </div>
+</section>
 
 <!-- BEGIN PRODUCT SELECTION OPTIONS -->
-<h3>OUR PRODUCTS</h3>
+<section>
+<div>
+    <h1>OUR PRODUCTS</h1>
+</div>
+
 
 <div class="container">
     <div class="row">
         <div class="card-group">
             <div class="col">
                 <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
-                    <img src="{% static 'imgs/test_imgs/Test_IMG007.png' %}" class="card-img" alt="...">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">PICTURE LINK </p>
-                    </div>
+                    <img src="{% static 'imgs/test_imgs/Test_IMG007.png' %}" class="card-img" style="width: 100%; height:200px;" alt="...">
+                    <div class="card">
+                        <button class="btn btn-secondary" type="submit">Button</button>
+                    </div> 
                 </div>
             </div>
 
             <div class="col">
                 <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
-                    <img src="{% static 'imgs/test_imgs/Test_IMG008.png' %}" class="card-img" alt="...">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">PICTURE LINK </p>
-                    </div>
+                    <img src="{% static 'imgs/test_imgs/Test_IMG008.png' %}" class="card-img" style="width: 100%; height:200px;" alt="...">
+                    <div class="card">
+                        <button class="btn btn-secondary" type="submit">Button</button>
+                    </div>   
                 </div>
             </div>
 
             <div class="col">
                 <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
-                    <img src="{% static 'imgs/test_imgs/Test_IMG009.png' %}" class="card-img" alt="...">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">PICTURE LINK </p>
-                    </div>
+                    <img src="{% static 'imgs/test_imgs/Test_IMG009.png' %}" class="card-img" style="width: 100%; height:200px;" alt="...">
+                    <div class="card">
+                        <button class="btn btn-secondary" type="submit">Button</button>
+                    </div> 
                 </div>
             </div>
 
             <div class="col">
                 <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
-                    <img src="{% static 'imgs/test_imgs/Test_IMG010.png' %}" class="card-img" alt="...">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">PICTURE LINK </p>
-                    </div>
+                    <img src="{% static 'imgs/test_imgs/Test_IMG010.png' %}" class="card-img" style="width: 100%; height:200px;" alt="...">
+                    <div class="card">
+                        <button class="btn btn-secondary" type="submit">Button</button>
+                    </div> 
                 </div>
             </div>
 
             <div class="col">
                 <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
-                    <img src="{% static 'imgs/test_imgs/Test_IMG011.png' %}" class="card-img" alt="...">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">PICTURE LINK </p>
-                    </div>
+                    <img src="{% static 'imgs/test_imgs/Test_IMG011.png' %}" class="card-img " style="width: 100%; height:200px;" alt="...">
+                    <div class="card">
+                        <button class="btn btn-secondary" type="submit">Button</button>
+                    </div> 
                 </div>
             </div>
 
         </div>
     </div>
 </div>
-
+</section>
 <!-- END PRODUCT SELECTION OPTIONS -->
 
 
 <!-- BEGIN INSTAGRAM PANEL -->
-
-<div class="row">
-    <div class="col" style="background-color: rgb(0, 255, 13)">Real Time photo Feed Framework using Django</div>
-    
+<section>
+<div>
+    <h1>Instagram</h1>
 </div>
 
+
+<div class="card-group">
+    <div class="card">
+        <img src="{% static 'imgs/test_imgs/Test_IMG012.png' %}" class="img-fluid  " style=" width: 100%; height:300px; border-radius:15px;  padding:1px; " alt="...">
+      
+    </div>
+    <div class="card">
+        <img src="{% static 'imgs/test_imgs/Test_IMG013.png' %}" class="img-fluid  " style=" width: 100%; height:300px; border-radius:20px;  padding:1px;" alt="...">
+      
+    </div>
+    <div class="card">
+        <img src="{% static 'imgs/test_imgs/Test_IMG014.png' %}" class="img-fluid  " style=" width: 100%; height:300px; border-radius:20px;  padding:px;" alt="...">
+
+      
+    </div>
+    <div class="card">
+        <img src="{% static 'imgs/test_imgs/Test_IMG015.png' %}" class="img-fluid  " style=" width: 100%; height:300px; border-radius:20px;  padding:1px;" alt="...">
+      
+    </div>
+  </div>
+
+
+
+<div class="card-group">
+
+</section>
 
  <!-- END INSTAGRAM PANEL -->
 
