--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -125,7 +125,7 @@
 
   <!-- Footer BEGINS -->
 
-  <footer class="fixed-bottom text-center text-white mt-1" style="background-color: #AFC5F0">
+  <footer class=" text-center text-white mt-1" style="background-color: #AFC5F0">
   
     <!--Call to action-->
       <div class="pt-2 pb-1">
