--- a/templates/main_page/main_page.html
+++ b/templates/main_page/main_page.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-
+<div> 
 <!-- BEGIN Carousel picture scroll/page -->
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -20,24 +20,24 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="{% static 'imgs/test_imgs/Test_IMG001_eardrop-earrings.png' %}" class="img-fluid d-block w-100"
-                style="width: 100%; height:500px;" alt="...">
+            <img src="{% static 'imgs/main/IMG_1984.jpg' %}" class="img-fluid d-block w-100 "
+                style=" ;" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="{% static 'imgs/test_imgs/Test_IMG002_necklace.png' %}" class="img-fluid d-block w-100"
-                style="width: 100%; height:500px;" alt="...">
+            <img src="{% static 'imgs/main/IMG_2151.jpg' %}" class="img-fluid d-block w-100"
+                style=" ;" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="{% static 'imgs/test_imgs/Test_IMG003_ring.png' %}" class="img-fluid d-block w-100 "
-                style="width: 100%; height:500px;" alt="...">
+            <img src="{% static 'imgs/main/IMG_2686.jpg' %}" class="img-fluid d-block w-100 "
+                style="" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
@@ -58,8 +58,8 @@
 <!-- BEGIN Clickable PIC Links -->
 <section>
     <div class="card-group">
-        <div class="card h-200">
-            <img src="{% static 'imgs/test_imgs/Test_IMG004.png' %}" class="card-img-top"
+        <div class="card h-200" style="padding:20px">
+            <img src="{% static 'imgs/main/homeL2/IMG_0623.jpg' %}" class="card-img-top"
                 style="width: 100%; height:400px;" alt="...">
             <div class="card-body">
                 <h5 class="card-title">New Arrivals</h5>
@@ -67,8 +67,8 @@
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
         </div>
-        <div class="card h-200">
-            <img src="{% static 'imgs/test_imgs/Test_IMG005.png' %}" class="card-img-top"
+        <div class="card h-200" style="padding:20px">
+            <img src="{% static 'imgs/main/homeL2/IMG_0877.jpg' %}" class="card-img-top"
                 style="width: 100%; height:400px;" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Best Sellers</h5>
@@ -76,8 +76,8 @@
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
         </div>
-        <div class="card h-200">
-            <img src="{% static 'imgs/test_imgs/Test_IMG006.png' %}" class="card-img-top"
+        <div class="card h-200" style="padding:20px">
+            <img src="{% static 'imgs/main/homeL2/IMG_2036.jpg' %}" class="card-img-top"
                 style="width: 100%; height:400px;" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Full Collection</h5>
@@ -90,22 +90,21 @@
 
 <!-- END Clickable PIC Links -->
 <section>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col" style="background-color: rgb(0, 255, 13)">
-                simple Elegant jewelry For Everyday Style
-
-                Rebecca Haas Jewelry is designed with a focus on clean lines and simple beauty. Each piece is carefully
-                handcrafted to create lightweight, effortless sophistication.
-
-                Ethically handmade to order in Vermont.
-            </div>
+    <div class="container-fluid" ">
+        <div class="flex-row">
+            <div class="col" style="background-color: #e9dcd6; padding-top:40px;padding-bottom:40px; padding-left:200px;padding-right:200px">
+               <div class="text-center" style="font-size:larger">
+                <p>CLEAN SIMPLE JEWELRY</p> 
+                </div>
+               <div class ="text-center">
+                <p>Hand Twist Jewelry is carefully handcrafted creating simple, elegant everyday jewelry. I not only believe that the artwork and design is a powerful part of the final product but also the quality of materials used.</p>
+                </div>
         </div>
     </div>
 </section>
 
 <!-- BEGIN PRODUCT SELECTION OPTIONS -->
-<section>
+<!-- <section>
     <div>
         <h1>OUR PRODUCTS</h1>
     </div>
@@ -167,39 +166,39 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <!-- END PRODUCT SELECTION OPTIONS -->
 
 
 <!-- BEGIN SECTION LAYOUT -->
 <section>
-    <div class="d-flex ">
-        <div class="p-2 flex-shrink-1" style="background-color:pink">
+    <div class="d-flex " style="padding-top:10px">
+        <div class="p-2 flex-shrink-1" style="background-color:#f1f1f1; padding:60px">
             <div>
                 <div class = "align-content-center">
-                    <h1>Designs Inspired by Nature</h1>
+                    <h1>Gift Ideas Under $29</h1>
                     <button class="btn btn-secondary" type="submit">View All</button>
                 </div>
             </div>
         </div>
-        <div class="p-2 w-100 ">
-            <img src="{% static 'imgs/test_imgs/Test_IMG001_eardrop-earrings.png' %}" class="img-fluid d-block w-100"
-                style="width: 100%; height:250px;" alt="...">
+        <div class="p-2 w-100">
+            <img src="{% static 'imgs/main/homeL3/IMG_2491.jpg' %}" class="img-fluid  w-100"
+                style="width: 100%; height:400px;" alt="...">
         </div>
 
     </div>
     <div class="d-flex flex-row-reverse">
-        <div class="p-2 flex-shrink-1" style="background-color:pink">
+        <div class="p-2 flex-shrink-1" style="background-color:#f1f1f1; padding:60px">
             <div>
                 <div class = "align-content-center">
-                    <h1>Designs Inspired by Nature</h1>
+                    <h1>Elegant Everyday Jewelry</h1>
                     <button class="btn btn-secondary" type="submit">View All</button>
                 </div>
             </div>
         </div>
         <div class="p-2 w-100 ">
-            <img src="{% static 'imgs/test_imgs/Test_IMG001_eardrop-earrings.png' %}" class="img-fluid d-block w-100"
-                style="width: 100%; height:250px;" alt="...">
+            <img src="{% static 'imgs/main/homeL3/IMG_1978.jpg' %}" class="img-fluid d-block w-100"
+                style="width: 100%; height:400px;" alt="...">
         </div>
 
     </div>
@@ -215,24 +214,24 @@
 
     <div class="card-group">
         <div class="card">
-            <img src="{% static 'imgs/test_imgs/Test_IMG012.png' %}" class="img-fluid  "
-                style=" width: 100%; height:300px; border-radius:15px;  padding:1px; " alt="...">
+            <img src="{% static 'imgs/main/Instagram_tests/IMG_2305.jpg' %}" class="img-fluid  "
+                style=" width: 100%; height:300px; ;  padding:1px; " alt="...">
 
         </div>
         <div class="card">
-            <img src="{% static 'imgs/test_imgs/Test_IMG013.png' %}" class="img-fluid  "
-                style=" width: 100%; height:300px; border-radius:20px;  padding:1px;" alt="...">
+            <img src="{% static 'imgs/main/Instagram_tests/IMG_2425.jpg' %}" class="img-fluid  "
+                style=" width: 100%; height:300px;  padding:1px;" alt="...">
 
         </div>
         <div class="card">
-            <img src="{% static 'imgs/test_imgs/Test_IMG014.png' %}" class="img-fluid  "
-                style=" width: 100%; height:300px; border-radius:20px;  padding:px;" alt="...">
+            <img src="{% static 'imgs/main/Instagram_tests/IMG_2524.jpg' %}" class="img-fluid  "
+                style=" width: 100%; height:300px;  padding:1px;" alt="...">
 
 
         </div>
         <div class="card">
-            <img src="{% static 'imgs/test_imgs/Test_IMG015.png' %}" class="img-fluid  "
-                style=" width: 100%; height:300px; border-radius:20px;  padding:1px;" alt="...">
+            <img src="{% static 'imgs/main/Instagram_tests/IMG_2734.jpg' %}" class="img-fluid  "
+                style=" width: 100%; height:300px;  padding:1px;" alt="...">
 
         </div>
     </div>
@@ -245,6 +244,6 @@
 
 <!-- END INSTAGRAM PANEL -->
 
-
+</div>
 
 {% endblock content %}
