--- a/templates/products/category.html
+++ b/templates/products/category.html
@@ -18,7 +18,7 @@
         <div class="row">
     {% for product_item in products %}
           <div class="col-lg-3 col-md-6 mb-4" >
-            <div class="card" style="width: 100%; height:300px;" >
+            <div class="card" style="width: 100%;" >
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"
                 data-mdb-ripple-color="light">
                 
