--- a/templates/shopcart/shoppingCartSummary.html
+++ b/templates/shopcart/shoppingCartSummary.html
@@ -18,7 +18,7 @@
             <div class="col-md-3 col-lg-2 order-md-first bg-light">
                 {% for image in product.product_image.all %}
                 {% if image.is_feature %}
-                <img class="img-fluid mx-auto d-block" width="120px" alt="Responsive image"
+                <img class="img-fluid mx-auto d-block" alt="Responsive image"
                     src="{{ image.images.url }}">
                 {% endif %}
                 {% endfor %}
