--- a/templates/main_page/main_page.html
+++ b/templates/main_page/main_page.html
@@ -7,9 +7,9 @@
 
 {% block content %}
 
-<div> 
+
 <!-- BEGIN Carousel picture scroll/page -->
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide  " data-bs-ride="carousel" >
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
@@ -21,7 +21,7 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="{% static 'imgs/main/IMG_1984.jpg' %}" class="img-fluid d-block w-100 "
-                style=" ;" alt="...">
+                style="" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
@@ -29,7 +29,7 @@
         </div>
         <div class="carousel-item">
             <img src="{% static 'imgs/main/IMG_2151.jpg' %}" class="img-fluid d-block w-100"
-                style=" ;" alt="...">
+                style=" " alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
@@ -60,7 +60,7 @@
     <div class="card-group">
         <div class="card h-200" style="padding:20px">
             <img src="{% static 'imgs/main/homeL2/IMG_0623.jpg' %}" class="card-img-top"
-                style="width: 100%; height:400px;" alt="...">
+                style="width: 100%; " alt="...">
             <div class="card-body">
                 <h5 class="card-title">New Arrivals</h5>
                 <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
@@ -69,7 +69,7 @@
         </div>
         <div class="card h-200" style="padding:20px">
             <img src="{% static 'imgs/main/homeL2/IMG_0877.jpg' %}" class="card-img-top"
-                style="width: 100%; height:400px;" alt="...">
+                style="width: 100%; " alt="...">
             <div class="card-body">
                 <h5 class="card-title">Best Sellers</h5>
                 <!-- <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p> -->
@@ -78,7 +78,7 @@
         </div>
         <div class="card h-200" style="padding:20px">
             <img src="{% static 'imgs/main/homeL2/IMG_2036.jpg' %}" class="card-img-top"
-                style="width: 100%; height:400px;" alt="...">
+                style="width: 100%; " alt="...">
             <div class="card-body">
                 <h5 class="card-title">Full Collection</h5>
                 <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p> -->
